--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -6,10 +6,19 @@ layout: default
   <header>
     <div class="about">
       <div class="cover-author-image">
-        <a href="{{site.baseurl}}/"><img src="{{site.baseurl}}/assets/img/{% if site.author-img %}{{site.author-img}}{% endif %}" alt="{{site.author}}"></a>
+        <a href="{{site.baseurl}}/">
+          <img src="{{site.baseurl}}/assets/img/{% if site.author-img %}{{site.author-img}}{% endif %}" alt="{{site.author}}">
+        </a>
       </div>
       <div class="author-name">{{site.author}}</div>
       <p>{{site.about-author}}</p>
+      <div class="pages-main">
+        <ul>
+          {% for item in site.data.pages.pag %}
+            <li><a href="/{{ item.url }}">{{ item.title }}</a></li>
+          {% endfor %} 
+        </ul>
+      </div>
     </div>
   </header> <!-- End Header -->
   <footer>
